<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:tools="http://schemas.android.com/tools"
	android:id="@+id/activity_main"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	android:background="@android:color/white"
	tools:context=".DestinationDetailActivity">
	<LinearLayout
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:orientation="vertical">
		<FrameLayout
			android:layout_width="match_parent"
			android:layout_height="wrap_content">
			<ImageView
				android:id="@+id/imv_destination"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:adjustViewBounds="true"
				android:src="@drawable/undraw_journey_lwlj"
				android:scaleType="fitXY"/>
			<LinearLayout
				android:layout_gravity="bottom"
				android:layout_marginBottom="16dp"
				android:gravity="center_vertical"
				android:orientation="vertical"
				android:layout_width="match_parent"
				android:layout_height="wrap_content">

			<TextView
				android:id="@+id/txv_title"
				android:layout_height="wrap_content"
				android:padding="8dp"
				android:textColor="#fff"
				android:text="@string/nama_destinasi"
				android:textAppearance="@style/TextAppearance.AppCompat.Medium"
				android:background="#4D000000"
				android:layout_width="match_parent"
				 />

				<TextView
					android:id="@+id/txv_cat"
					android:layout_height="wrap_content"
					android:textColor="#fff"
					android:paddingLeft="8dp"
					android:text="@string/category_destination"
					android:textAppearance="@style/TextAppearance.AppCompat.Small"
					android:background="#4D000000"
					android:layout_width="match_parent"
					/>

			</LinearLayout>
		</FrameLayout>

		<TableLayout
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:layout_marginLeft="16dp"
			android:layout_marginRight="16dp"
			android:layout_marginBottom="16dp">
			<TableRow
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:layout_marginBottom="8dp">
				<TextView
					tools:text="Alamat"
					style="@style/TextSpec.Field"
					android:text="@string/alamat"/>
				<TextView
					android:id="@+id/txv_address"
					style="@style/TextSpec.Value"
					android:text="@string/address_destination"/>
			</TableRow>
			<TableRow
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:layout_marginBottom="8dp">
				<TextView
					tools:text="Deskripsi"
					style="@style/TextSpec.Field"
					android:text="deskripsi"/>
				<TextView
					android:id="@+id/txv_desc"
					style="@style/TextSpec.Value"
					android:text="@string/description_destination"/>
			</TableRow>
			<TableRow
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:layout_marginBottom="8dp">
				<TextView
					tools:text="Kabupaten"
					style="@style/TextSpec.Field"
					android:text="@string/kabupaten"/>
				<TextView
					android:id="@+id/txv_kabupaten"
					style="@style/TextSpec.Value"
					android:text="@string/kabupaten_value"/>
			</TableRow>

			<TableRow
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:layout_marginBottom="8dp">
				<TextView
					tools:text="Kecamatan"
					style="@style/TextSpec.Field"
					android:text="@string/kecamatan"/>
				<TextView
					android:id="@+id/txv_kecamatan"
					style="@style/TextSpec.Value"
					android:text="@string/kecamatan_value"/>
			</TableRow>
		</TableLayout>
	</LinearLayout>
</ScrollView>