<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	xmlns:tools="http://schemas.android.com/tools"
	android:layout_width="match_parent"
	android:layout_height="wrap_content"
	android:layout_marginStart="10dp"
	android:layout_marginTop="5dp"
	app:cardElevation="5dp"
	android:layout_marginEnd="10dp"
	android:layout_marginBottom="5dp"
	app:cardBackgroundColor="@android:color/white"
	app:cardCornerRadius="5dp">

	<LinearLayout
		android:layout_width="match_parent"
		android:layout_height="73dp"
		android:orientation="horizontal">

		<ImageView
			android:id="@+id/iv_home"
			android:layout_width="65dp"
			android:layout_height="65dp"
			android:layout_marginLeft="3dp"
			android:layout_marginTop="3dp"
			app:srcCompat="@drawable/undraw_journey_lwlj" />

		<LinearLayout
			android:layout_width="match_parent"
			android:orientation="vertical"
			android:layout_height="match_parent">

			<TextView
				android:textStyle="bold"
				android:id="@+id/txv_destination"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_marginStart="15dp"
				android:layout_marginTop="4dp"
				android:text="@string/name_destination"
				android:textSize="12sp" />

			<TextView
				android:id="@+id/txv_dest_desc"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:layout_marginStart="15dp"
				android:layout_marginTop="10sp"
				android:ellipsize="end"
				android:layout_marginEnd="5dp"
				android:maxLines="1"
				android:textSize="12sp"
				android:text="@string/description" />

			<TextView
				android:textSize="12sp"
				android:id="@+id/txv_cat"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_marginTop="4dp"
				android:layout_gravity="end"
				android:layout_marginRight="5dp"
				android:textColor="@color/colorPrimary"
				android:textStyle="bold"
				android:text="@string/category_destination" />

		</LinearLayout>

	</LinearLayout>

</androidx.cardview.widget.CardView>